--- a/nuandao/templates/nuandao/detail.html
+++ b/nuandao/templates/nuandao/detail.html
@@ -5,6 +5,6 @@
 {% block content %}
     <h2>{{ article.article_title }}</h2>
     <article class="article_main">
-    {{ article.article_data }}
+    {% autoescape off %}{{ article.article_data|linebreaks }}{% endautoescape %}
     </article>
 {% endblock %}
