--- a/nuandao/templates/nuandao/nav.html
+++ b/nuandao/templates/nuandao/nav.html
@@ -11,7 +11,7 @@
             <div class="navbar-nav mr-auto">
                 <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="#">智能生活</a>
-                <a class="nav-item nav-link" href="#">花间课</a>
+                <a class="nav-item nav-link" href="{% url 'nuandao:list' category='ac' %}">花间课</a>
                 <a class="nav-item nav-link disabled" href="#">奇淫巧技</a>
                 <a class="nav-item nav-link" href="#">代码宅</a>
                 <a class="nav-item nav-link" href="#">关于</a>
