--- a/nuandao/templates/nuandao/base_list.html
+++ b/nuandao/templates/nuandao/base_list.html
@@ -1,12 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-
-
-</body>
-</html>
+{% if articles_list %}
+  {% for article in articles_list %}
+    <article class="post ">
+      <header class="post-header">
+        <h2 class="post-title">{{ article.article_title }}</h2>
+        <div class="post-meta">
+          <span class="post-time">发表于{{ article.publish_date }}</span>
+          <span class="post-last-edit-time">最后更新于{{ article.last_edit_date }}</span>
+          <span class="label label-default">作者{{ article.author }}</span>
+          <span class="post-category">分类于<a href="#"> {{ article.article_category }}</a></span>
+        </div>
+      </header>
+      <div class="post-body-limited">
+        <p>{% autoescape off %}{{ article.article_data }}{% endautoescape %}</p>
+      </div>
+      <p>
+        <a class="btn" href="{% url 'nuandao:detail' article.id %}">View details »</a>
+      </p>
+    </article>
+  {% endfor %}
+{% else %}
+  <h1>未请求到任何文章。</h1>
+{% endif %}
